// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addBilling changes cards for customer who had a failed charge 1`] = `
Object {
  "notification": Array [],
  "organization": Object {
    "createdAt": 2017-01-01T07:00:00.000Z,
    "creditCard": Object {
      "brand": "Visa",
      "expiry": "12/23",
      "id": "card_failCharge",
      "last4": "4242",
      "number": "4000000000000341",
    },
    "id": 0,
    "name": "The Averagers, Inc.",
    "orgUsers": Array [
      Object {
        "id": 3,
        "inactive": false,
        "role": "billingLeader",
      },
      Object {
        "id": 4,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 5,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 6,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 7,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 8,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 9,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 10,
        "inactive": false,
        "role": null,
      },
    ],
    "periodEnd": 2017-02-01T08:00:00.000Z,
    "periodStart": 2017-01-01T08:00:00.000Z,
    "stripeId": 1,
    "stripeSubscriptionId": 2,
    "updatedAt": 2017-01-01T07:00:00.000Z,
  },
  "team": Object {
    "activeFacilitator": null,
    "facilitatorPhase": "lobby",
    "facilitatorPhaseItem": null,
    "id": 11,
    "isPaid": true,
    "meetingId": null,
    "meetingPhase": "lobby",
    "meetingPhaseItem": null,
    "orgId": 0,
    "teamName": "Team America",
  },
}
`;

exports[`addBilling changes cards for customer who had a failed charge 2`] = `
Object {
  "customers": Array [
    Object {
      "account_balance": 0,
      "created": 1483257600,
      "currency": "usd",
      "default_source": "card_123",
      "delinquent": false,
      "description": null,
      "discount": null,
      "email": null,
      "id": 1,
      "livemode": false,
      "metadata": Object {
        "orgId": 0,
      },
      "object": "customer",
      "shipping": null,
      "sources": Object {
        "data": Array [
          Object {
            "address_city": null,
            "address_country": null,
            "address_line1": null,
            "address_line1_check": null,
            "address_line2": null,
            "address_state": null,
            "address_zip": null,
            "address_zip_check": null,
            "brand": "Visa",
            "country": "US",
            "customer": 1,
            "cvc_check": "pass",
            "dynamic_last4": null,
            "exp_month": "12",
            "exp_year": "2023",
            "funding": "credit",
            "id": "card_123",
            "last4": "4242",
            "metadata": Object {},
            "name": null,
            "object": "card",
            "tokenization_method": null,
          },
        ],
        "has_more": false,
        "object": "list",
        "total_count": 1,
        "url": 12,
      },
    },
  ],
  "subscriptions": Array [
    Object {
      "application_fee_percent": null,
      "cancel_at_period_end": false,
      "canceled_at": null,
      "created": 1483257600,
      "current_period_end": 1483257599,
      "current_period_start": 1483254000,
      "customer": 1,
      "discount": null,
      "ended_at": null,
      "id": 13,
      "items": Object {
        "data": Array [
          Object {
            "created": 1483257600,
            "id": "si_123",
            "object": "subscription_item",
            "plan": Object {
              "amount": 500,
              "created": 1483257600,
              "currency": "usd",
              "id": "action-monthly",
              "interval": "month",
              "interval_count": 1,
              "livemode": false,
              "metadata": Object {},
              "name": "action-monthly",
              "object": "plan",
              "statement_descriptor": null,
              "trial_period_days": null,
            },
            "quantity": 8,
          },
        ],
        "has_more": false,
        "object": "list",
        "total_count": 1,
        "url": 14,
      },
      "livemode": false,
      "metadata": Object {
        "orgId": 0,
      },
      "object": "subscription",
      "plan": Object {
        "amount": 500,
        "created": 1483257600,
        "currency": "usd",
        "id": "action-monthly",
        "interval": "month",
        "interval_count": 1,
        "livemode": false,
        "metadata": Object {},
        "name": "action-monthly",
        "object": "plan",
        "statement_descriptor": null,
        "trial_period_days": null,
      },
      "quantity": 8,
      "start": 1483254000,
      "status": "canceled",
      "tax_percent": 0,
      "trial_end": null,
      "trial_start": null,
    },
    Object {
      "application_fee_percent": null,
      "cancel_at_period_end": false,
      "canceled_at": null,
      "created": 1483257600,
      "current_period_end": 1485936000,
      "current_period_start": 1483257600,
      "customer": 1,
      "discount": null,
      "ended_at": null,
      "id": 2,
      "items": Object {
        "data": Array [
          Object {
            "created": 1483257600,
            "id": "si_123",
            "object": "subscription_item",
            "plan": Object {
              "amount": 500,
              "created": 1483257600,
              "currency": "usd",
              "id": "action-monthly",
              "interval": "month",
              "interval_count": 1,
              "livemode": false,
              "metadata": Object {},
              "name": "action-monthly",
              "object": "plan",
              "statement_descriptor": null,
              "trial_period_days": null,
            },
            "quantity": 8,
          },
        ],
        "has_more": false,
        "object": "list",
        "total_count": 1,
        "url": 15,
      },
      "livemode": false,
      "metadata": Object {
        "orgId": 0,
      },
      "object": "subscription",
      "plan": Object {
        "amount": 500,
        "created": 1483257600,
        "currency": "usd",
        "id": "action-monthly",
        "interval": "month",
        "interval_count": 1,
        "livemode": false,
        "metadata": Object {},
        "name": "action-monthly",
        "object": "plan",
        "statement_descriptor": null,
        "trial_period_days": null,
      },
      "quantity": 8,
      "start": 1483257600,
      "status": "active",
      "tax_percent": 0,
      "trial_end": null,
      "trial_start": null,
    },
  ],
}
`;

exports[`addBilling changes cards for customers in good standing 1`] = `
Object {
  "organization": Object {
    "createdAt": 2017-01-01T07:00:00.000Z,
    "creditCard": Object {
      "brand": "Visa",
      "expiry": "12/23",
      "id": "card_124",
      "last4": "4242",
      "number": "4012888888881881",
    },
    "id": 0,
    "name": "The Averagers, Inc.",
    "orgUsers": Array [
      Object {
        "id": 3,
        "inactive": false,
        "role": "billingLeader",
      },
      Object {
        "id": 4,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 5,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 6,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 7,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 8,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 9,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 10,
        "inactive": false,
        "role": null,
      },
    ],
    "periodEnd": 2017-01-31T07:00:00.000Z,
    "periodStart": 2017-01-01T07:00:00.000Z,
    "stripeId": 1,
    "stripeSubscriptionId": 2,
    "updatedAt": 2017-01-01T07:00:00.000Z,
  },
}
`;

exports[`addBilling changes cards for customers in good standing 2`] = `
Object {
  "customers": Array [
    Object {
      "account_balance": 0,
      "created": 1483257600,
      "currency": "usd",
      "default_source": "card_123",
      "delinquent": false,
      "description": null,
      "discount": null,
      "email": null,
      "id": 1,
      "livemode": false,
      "metadata": Object {
        "orgId": 0,
      },
      "object": "customer",
      "shipping": null,
      "sources": Object {
        "data": Array [
          Object {
            "address_city": null,
            "address_country": null,
            "address_line1": null,
            "address_line1_check": null,
            "address_line2": null,
            "address_state": null,
            "address_zip": null,
            "address_zip_check": null,
            "brand": "Visa",
            "country": "US",
            "customer": 1,
            "cvc_check": "pass",
            "dynamic_last4": null,
            "exp_month": "12",
            "exp_year": "2023",
            "funding": "credit",
            "id": "card_123",
            "last4": "4242",
            "metadata": Object {},
            "name": null,
            "object": "card",
            "tokenization_method": null,
          },
        ],
        "has_more": false,
        "object": "list",
        "total_count": 1,
        "url": 11,
      },
    },
  ],
  "subscriptions": Array [
    Object {
      "application_fee_percent": null,
      "cancel_at_period_end": false,
      "canceled_at": null,
      "created": 1483257600,
      "current_period_end": 1485846000,
      "current_period_start": 1483254000,
      "customer": 1,
      "discount": null,
      "ended_at": null,
      "id": 2,
      "items": Object {
        "data": Array [
          Object {
            "created": 1483257600,
            "id": "si_123",
            "object": "subscription_item",
            "plan": Object {
              "amount": 500,
              "created": 1483257600,
              "currency": "usd",
              "id": "action-monthly",
              "interval": "month",
              "interval_count": 1,
              "livemode": false,
              "metadata": Object {},
              "name": "action-monthly",
              "object": "plan",
              "statement_descriptor": null,
              "trial_period_days": null,
            },
            "quantity": 8,
          },
        ],
        "has_more": false,
        "object": "list",
        "total_count": 1,
        "url": 12,
      },
      "livemode": false,
      "metadata": Object {
        "orgId": 0,
      },
      "object": "subscription",
      "plan": Object {
        "amount": 500,
        "created": 1483257600,
        "currency": "usd",
        "id": "action-monthly",
        "interval": "month",
        "interval_count": 1,
        "livemode": false,
        "metadata": Object {},
        "name": "action-monthly",
        "object": "plan",
        "statement_descriptor": null,
        "trial_period_days": null,
      },
      "quantity": 8,
      "start": 1483254000,
      "status": "active",
      "tax_percent": 0,
      "trial_end": null,
      "trial_start": null,
    },
  ],
}
`;

exports[`addBilling extends trial for those still in trial period 1`] = `
Object {
  "notification": Array [],
  "organization": Object {
    "createdAt": 2017-01-01T07:00:00.000Z,
    "creditCard": Object {
      "brand": "Visa",
      "expiry": "12/23",
      "last4": "4242",
    },
    "id": 0,
    "name": "The Averagers, Inc.",
    "orgUsers": Array [
      Object {
        "id": 3,
        "inactive": false,
        "role": "billingLeader",
      },
      Object {
        "id": 4,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 5,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 6,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 7,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 8,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 9,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 10,
        "inactive": false,
        "role": null,
      },
    ],
    "periodEnd": 2017-03-02T07:00:00.000Z,
    "periodStart": 2017-01-01T07:00:00.000Z,
    "stripeId": 1,
    "stripeSubscriptionId": 2,
    "updatedAt": 2017-01-01T07:00:00.000Z,
  },
}
`;

exports[`addBilling extends trial for those still in trial period 2`] = `
Object {
  "customers": Array [
    Object {
      "account_balance": 0,
      "created": 1483257600,
      "currency": "usd",
      "default_source": "card_123",
      "delinquent": false,
      "description": null,
      "discount": null,
      "email": null,
      "id": 1,
      "livemode": false,
      "metadata": Object {
        "orgId": 0,
      },
      "object": "customer",
      "shipping": null,
      "sources": Object {
        "data": Array [
          Object {
            "address_city": null,
            "address_country": null,
            "address_line1": null,
            "address_line1_check": null,
            "address_line2": null,
            "address_state": null,
            "address_zip": null,
            "address_zip_check": null,
            "brand": "Visa",
            "country": "US",
            "customer": 1,
            "cvc_check": "pass",
            "dynamic_last4": null,
            "exp_month": "12",
            "exp_year": "2023",
            "funding": "credit",
            "id": "card_123",
            "last4": "4242",
            "metadata": Object {},
            "name": null,
            "object": "card",
            "tokenization_method": null,
          },
        ],
        "has_more": false,
        "object": "list",
        "total_count": 1,
        "url": 11,
      },
    },
  ],
  "subscriptions": Array [
    Object {
      "application_fee_percent": null,
      "cancel_at_period_end": false,
      "canceled_at": null,
      "created": 1483257600,
      "current_period_end": 1488438000,
      "current_period_start": 1483254000,
      "customer": 1,
      "discount": null,
      "ended_at": null,
      "id": 2,
      "items": Object {
        "data": Array [
          Object {
            "created": 1483257600,
            "id": "si_123",
            "object": "subscription_item",
            "plan": Object {
              "amount": 500,
              "created": 1483257600,
              "currency": "usd",
              "id": "action-monthly",
              "interval": "month",
              "interval_count": 1,
              "livemode": false,
              "metadata": Object {},
              "name": "action-monthly",
              "object": "plan",
              "statement_descriptor": null,
              "trial_period_days": null,
            },
            "quantity": 8,
          },
        ],
        "has_more": false,
        "object": "list",
        "total_count": 1,
        "url": 12,
      },
      "livemode": false,
      "metadata": Object {
        "orgId": 0,
      },
      "object": "subscription",
      "plan": Object {
        "amount": 500,
        "created": 1483257600,
        "currency": "usd",
        "id": "action-monthly",
        "interval": "month",
        "interval_count": 1,
        "livemode": false,
        "metadata": Object {},
        "name": "action-monthly",
        "object": "plan",
        "statement_descriptor": null,
        "trial_period_days": null,
      },
      "quantity": 8,
      "start": 1483254000,
      "status": "trialing",
      "tax_percent": 0,
      "trial_end": 1488438000,
      "trial_start": 1483257600,
    },
  ],
}
`;

exports[`addBilling starts a new subscription for those who let the trial expire 1`] = `
Object {
  "notification": Array [],
  "organization": Object {
    "createdAt": 2017-01-01T07:00:00.000Z,
    "creditCard": Object {
      "brand": "Visa",
      "expiry": "12/23",
      "last4": "4242",
    },
    "id": 0,
    "name": "The Averagers, Inc.",
    "orgUsers": Array [
      Object {
        "id": 3,
        "inactive": false,
        "role": "billingLeader",
      },
      Object {
        "id": 4,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 5,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 6,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 7,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 8,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 9,
        "inactive": false,
        "role": null,
      },
      Object {
        "id": 10,
        "inactive": false,
        "role": null,
      },
    ],
    "periodEnd": 2017-02-01T08:00:00.000Z,
    "periodStart": 2017-01-01T08:00:00.000Z,
    "stripeId": 1,
    "stripeSubscriptionId": 2,
    "updatedAt": 2017-01-01T07:00:00.000Z,
  },
  "team": Object {
    "activeFacilitator": null,
    "facilitatorPhase": "lobby",
    "facilitatorPhaseItem": null,
    "id": 11,
    "isPaid": true,
    "meetingId": null,
    "meetingPhase": "lobby",
    "meetingPhaseItem": null,
    "orgId": 0,
    "teamName": "Team America",
  },
}
`;

exports[`addBilling starts a new subscription for those who let the trial expire 2`] = `
Object {
  "customers": Array [
    Object {
      "account_balance": 0,
      "created": 1483257600,
      "currency": "usd",
      "default_source": "card_123",
      "delinquent": false,
      "description": null,
      "discount": null,
      "email": null,
      "id": 1,
      "livemode": false,
      "metadata": Object {
        "orgId": 0,
      },
      "object": "customer",
      "shipping": null,
      "sources": Object {
        "data": Array [
          Object {
            "address_city": null,
            "address_country": null,
            "address_line1": null,
            "address_line1_check": null,
            "address_line2": null,
            "address_state": null,
            "address_zip": null,
            "address_zip_check": null,
            "brand": "Visa",
            "country": "US",
            "customer": 1,
            "cvc_check": "pass",
            "dynamic_last4": null,
            "exp_month": "12",
            "exp_year": "2023",
            "funding": "credit",
            "id": "card_123",
            "last4": "4242",
            "metadata": Object {},
            "name": null,
            "object": "card",
            "tokenization_method": null,
          },
        ],
        "has_more": false,
        "object": "list",
        "total_count": 1,
        "url": 12,
      },
    },
  ],
  "subscriptions": Array [
    Object {
      "application_fee_percent": null,
      "cancel_at_period_end": false,
      "canceled_at": null,
      "created": 1483257600,
      "current_period_end": 1483257599,
      "current_period_start": 1483254000,
      "customer": 1,
      "discount": null,
      "ended_at": null,
      "id": 13,
      "items": Object {
        "data": Array [
          Object {
            "created": 1483257600,
            "id": "si_123",
            "object": "subscription_item",
            "plan": Object {
              "amount": 500,
              "created": 1483257600,
              "currency": "usd",
              "id": "action-monthly",
              "interval": "month",
              "interval_count": 1,
              "livemode": false,
              "metadata": Object {},
              "name": "action-monthly",
              "object": "plan",
              "statement_descriptor": null,
              "trial_period_days": null,
            },
            "quantity": 8,
          },
        ],
        "has_more": false,
        "object": "list",
        "total_count": 1,
        "url": 14,
      },
      "livemode": false,
      "metadata": Object {
        "orgId": 0,
      },
      "object": "subscription",
      "plan": Object {
        "amount": 500,
        "created": 1483257600,
        "currency": "usd",
        "id": "action-monthly",
        "interval": "month",
        "interval_count": 1,
        "livemode": false,
        "metadata": Object {},
        "name": "action-monthly",
        "object": "plan",
        "statement_descriptor": null,
        "trial_period_days": null,
      },
      "quantity": 8,
      "start": 1483254000,
      "status": "canceled",
      "tax_percent": 0,
      "trial_end": 1483257599,
      "trial_start": 1483257600,
    },
    Object {
      "application_fee_percent": null,
      "cancel_at_period_end": false,
      "canceled_at": null,
      "created": 1483257600,
      "current_period_end": 1485936000,
      "current_period_start": 1483257600,
      "customer": 1,
      "discount": null,
      "ended_at": null,
      "id": 2,
      "items": Object {
        "data": Array [
          Object {
            "created": 1483257600,
            "id": "si_123",
            "object": "subscription_item",
            "plan": Object {
              "amount": 500,
              "created": 1483257600,
              "currency": "usd",
              "id": "action-monthly",
              "interval": "month",
              "interval_count": 1,
              "livemode": false,
              "metadata": Object {},
              "name": "action-monthly",
              "object": "plan",
              "statement_descriptor": null,
              "trial_period_days": null,
            },
            "quantity": 8,
          },
        ],
        "has_more": false,
        "object": "list",
        "total_count": 1,
        "url": 15,
      },
      "livemode": false,
      "metadata": Object {
        "orgId": 0,
      },
      "object": "subscription",
      "plan": Object {
        "amount": 500,
        "created": 1483257600,
        "currency": "usd",
        "id": "action-monthly",
        "interval": "month",
        "interval_count": 1,
        "livemode": false,
        "metadata": Object {},
        "name": "action-monthly",
        "object": "plan",
        "statement_descriptor": null,
        "trial_period_days": null,
      },
      "quantity": 8,
      "start": 1483257600,
      "status": "active",
      "tax_percent": 0,
      "trial_end": null,
      "trial_start": null,
    },
  ],
}
`;

exports[`addBilling throw when the caller is not an org leader 1`] = `"{\\"_error\\":\\"Unauthorized. User is not a Billing Leader for that organization\\"}"`;

exports[`addBilling thrown when a bad source token is provided 1`] = `"No such token: BAD_TOKEN"`;

exports[`addBilling throws when no websocket is present 1`] = `"{\\"_error\\":\\"this must be called from a websocket\\"}"`;
